2012-05-03  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Update.

2012-05-03  Andreas Jaeger  <aj@suse.de>

	* malloc/mcheck.c (mcheck): Add barrier so that malloc/free pair
	does not get optimized out.
	(malloc_opt_barrier): New.

2012-05-03  Andreas Jaeger  <aj@suse.de>
	    Roland McGrath <roland@hack.frob.com>

        * Makerules (.PRECIOUS): Add %.symlist pattern to prevent
	intermediate file deletion.
        (generated): Add .symlist files.

2012-05-03  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13775]
	* libio/bits/stdio-ldbl.h [__USE_XOPEN2K8] (__dprintf_chk):
	Redirect under this condition.
	[__USE_XOPEN2K8] (__vdprintf_chk): Likewise.
	[__USE_GNU] (__dprintf_chk): Not under this condition.
	[__USE_GNU] (__vdprintf_chk): Likewise.
	* libio/bits/stdio2.h [__USE_XOPEN2K8] (__dprintf_chk): Declare
	under this condition.
	[__USE_XOPEN2K8] (__vdprintf_chk): Likewise.
	[__USE_XOPEN2K8] (dprintf): Define under this condition.
	[__USE_XOPEN2K8] (vdprintf): Likewise.
	[__USE_GNU] (__dprintf_chk): Not under this condition.
	[__USE_GNU] (__vdprintf_chk): Likewise.
	[__USE_GNU] (dprintf): Likewise.
	[__USE_GNU] (vdprintf): Likewise.

2012-05-03  Roland McGrath  <roland@hack.frob.com>

	* elf/Makefile (common-generated): Set this instead of generated for
	.dyn, .phdr, .jmprel files.  Remove $(common-objpfx) from the
	$(all-built-dso)-derived lists.

2012-05-03  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/fpu/libm-test-ulps: Update.

	* FAQ: Removed.
	* FAQ.in: Likewise.
	* scripts/gen-FAQ.pl: Likewise.
	* manual/install.texi (Installation): Point to online location of
	FAQ.
	* Makefile (files-for-dist): Remove FAQ.
	(FAQ): Remove.

2012-05-02  Allan McRae  <allan@archlinux.org>

	* elf/Makefile: (LDFLAGS-nodel2mod3.so: Use $(no-as-needed).
	(LDFLAGS-reldepmod5.so): Likewise.
	(LDFLAGS-reldep6mod1.so): Likewise.
	(LDFLAGS-reldep6mod4.so): Likewise.
	(LDFLAGS-reldep8mod3.so): Likewise.
	(LDFLAGS-unload4mod1.so): Likewise.